Finish calculator project with guidance from YouTube. Need to rework from scratch.

--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,54 @@
 body {
-    background-color: aliceblue;
+    font-family: Gotham Rounded, sans-serif;
+    background: linear-gradient(to right, rgb(62, 125, 180), rgb(61, 48, 173));
 }
 
-button {
-    font-weight: bold;
-    width: 50px;
-    height: 50px;
-    background-color: rgb(177, 239, 255);
-    border: none;
-    border-radius: 50%;
-    margin: 3px;
-    align-content: center;
-}
-
-button:hover {
-    cursor: pointer;
-    background-color: azure;
-}
-
-#num0 {
-    width: 106px;
-    border-radius: 30px;
-}
-
-#func-button {
-    background-color: rgb(210, 210, 210);
-}
-
-#func-button:hover {
-    background-color: rgb(32, 32, 32);
-    color: #fff;
-}
-
-#main-container {
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.calculator-grid {
+    display: grid;
     justify-content: center;
-    align-items: center;
-    background-color: bisque;
+    align-content: center;
+    gap: 5px;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-#calc-display {
-    width: 250px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-    background-color: white;
-    font-size: 14px;
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 50px;
 }
 
-#num-buttons {
-    width: 250px;
+.calculator-grid > button:hover {
+    background-color: rgba(255, 255, 255, .9);
+}
+
+.span-two {
+    grid-column: span 2;
+}
+
+.output {
+    color: #fefefe;
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: rgb(87, 59, 25);
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-operand {
+    color: rgba(255, 255, 255, .75);
+    font-size: 1.5rem;
+}
+
+.output .current-operand {
+    color: rgba(255, 255, 255, 1);
+    font-size: 2.5rem;
 }
