--- a/style.css
+++ b/style.css
@@ -3,11 +3,30 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+a {
+    color: #f4a261;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #e76f51;
+    text-decoration: underline;
+}
+
+#footer {
+    color:rgba(255, 255, 255, .5);
+    background-color: rgba(0, 0, 0, .25);
+    padding: 10px;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+}
+
 .calculator-grid {
     display: grid;
     justify-content: center;
     align-content: center;
-    gap: 5px;
+    gap: 4px;
     min-height: 100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
@@ -28,6 +47,12 @@ body {
     outline: none;
 }
 
+.calculator-grid > button:active {
+    background-color: rgba(255, 255, 255, .5);
+    border: 1px solid rgba(255, 255, 255, .5);
+    outline: none;
+}
+
 button.operation {
     border: 1px solid #a87a55;
     background-color: #f4a261;
@@ -41,6 +66,12 @@ button.all-clear, button.delete, button.tip {
 
 .span-two {
     grid-column: span 2;
+}
+
+.span-four {
+    grid-column: span 4;
+    color: rgba(255, 255, 255, .5);
+    font-size: .8rem;
 }
 
 .output {
